better describe how to add the Xss option in eclipse
git-svn-id: https://svn.jboss.org/repos/labs/labs/jbossrules/trunk@36403 c60d74c8-e8f6-0310-9e8f-d4a2fc68ab70